--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.4.1",
-    "express": "^4.21.2"
+    "bcryptjs": "^3.0.2",
+    "express": "^4.21.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
