--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,12 @@
     "@prisma/client": "^6.4.1",
     "bcryptjs": "^3.0.2",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
     "prisma": "^6.4.1",
     "ts-node": "^10.9.2",
